Fix hero content margin-top for better spacing on mobile devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,7 @@
     padding-right: 0;
     margin-bottom: 3rem;
     text-align: center;
+    margin-top: 90px;
   }
 
   .hero__image-wrapper {
